--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   background-color: #1F2937;
   display: flex;
   justify-content: space-between;
-  padding: 0 18%;
+  padding: 18px 18%;
 
 }
 
@@ -69,6 +69,7 @@ button {
   background-color: #3882F6;
   border-radius: 5px; 
   color: #F9FAF8;
+  border-color: #F9FAF8;
   padding: 8px 30px;
   font-size: 18px;
 }
