--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 .header {
-  background-color: #cf4401;
+  background-color: #232323;
   display: flex;
   justify-content: space-between;
   padding: 10px 18%;
@@ -17,7 +17,7 @@ body {
 .logo {
   font-size: 24px;
   font-weight: 900;
-  color: #F9FAF8;
+  color: #cf4401;
   display: flex;
   align-items: center;
 }
